--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PORT=5432
-DB_PASSWORD=Chelseafc
-DB_NAME=Smart Inventory Management
+export DB_HOST=localhost
+export DB_USER=postgres
+export DB_PORT=5432
+export DB_PASSWORD=Chelseafc 
+export DB_NAME=Smart Inventory Management
 
-// login
-SECRET_KEY = any random string here
+
+export SECRET_KEY = Jhadongind
